# quanteval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/scripts/: check_version_bump.py
.github/workflows/: ci.yml  release.yml
docs/: README_CN.md  TUTORIAL_CN.md  TUTORIAL_EN.md
examples/: 01_quickstart.ipynb  02_parameter_optimization.ipynb  03_strategy_comparison.ipynb  04_hk_market_support.ipynb  05_position_sizing.ipynb
src/quanteval/: __init__.py  comparison.py
src/quanteval/aggregators/: __init__.py  base.py  weighted.py
src/quanteval/core/: __init__.py  backtester.py  sizer.py  strategy.py  transaction.py
src/quanteval/data/: __init__.py  loader.py
src/quanteval/factors/: __init__.py  base.py  technical.py
src/quanteval/metrics/: __init__.py  performance.py
src/quanteval/optimization/: __init__.py  grid_search.py  walk_forward.py
src/quanteval/strategies/: __init__.py  bollinger_mean_reversion.py  buy_hold.py  donchain_channel.py  dual_ma.py  dual_thrust.py  multi_factor_model.py  rsi_reversion.py
src/quanteval/utils/: __init__.py  comparison.py  helpers.py
src/quanteval/visualization/: __init__.py  interactive.py  static.py
tests/: conftest.py  test_comparison.py  test_core.py  test_data_loader.py  test_factors.py  test_metrics.py  test_multi_factor_model.py  test_optimization.py  test_strategies.py  test_utils.py
